--- a/src/components/ModalWindow/ModalWindow.css
+++ b/src/components/ModalWindow/ModalWindow.css
@@ -12,7 +12,7 @@
 .modal__container {
     position: relative;
     width: 800px;
-    height: 600px;
+    height: 450px;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -20,16 +20,72 @@
     padding: 25px 30px;
     box-sizing: border-box;
 }
-.modal__flex {
+.modal__form {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 25px;
+    color: #1f1f1f;
+    font-size: 22px;
+}
+.modal__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
 }
 .modal__header > img{
     width: 50px;
 }
+.modal__header > img:active {
+    transform: scale(1.1);
+}
 .modal__header > p {
     font-size: 32px;
     margin-left: 100px;
+}
+.modal__body {
+    border: #d49d7a 1px solid;
+    border-radius: 15px;
+    padding: 20px 15px;
+    box-sizing: border-box;
+}
+.modal__form > input {
+    width: 400px;
+    height: 35px;
+    background: blanchedalmond;
+    border: #d49d7a 1px solid;
+    border-radius: 5px;
+    padding: 0 10px;
+    outline: none;
+    box-sizing: border-box;
+}
+.modal__form > input:focus {
+    border: #a74405 1px solid;
+}
+.modal__form > select {
+    width: 400px;
+    height: 35px;
+    background: blanchedalmond;
+    border: #d49d7a 1px solid;
+    border-radius: 5px;
+    padding: 0 10px;
+    outline: none;
+}
+.modal__button {
+    margin-top: 40px;
+    width: 130px;
+    height: 45px;
+    background: #a74405;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+    position: absolute;
+    left: 70%;
+    outline: none;
+}
+.modal__button:active {
+    background: #542202;
 }
 
