--- a/src/components/ModalWindow/ModalWindow.css
+++ b/src/components/ModalWindow/ModalWindow.css
@@ -44,36 +44,8 @@
     font-size: 32px;
     margin-left: 100px;
 }
-.modal__body {
-    border: #d49d7a 1px solid;
-    border-radius: 15px;
-    padding: 20px 15px;
-    box-sizing: border-box;
-}
-.modal__form > input {
-    width: 400px;
-    height: 35px;
-    background: blanchedalmond;
-    border: #d49d7a 1px solid;
-    border-radius: 5px;
-    padding: 0 10px;
-    outline: none;
-    box-sizing: border-box;
-}
-.modal__form > input:focus {
-    border: #a74405 1px solid;
-}
-.modal__form > select {
-    width: 400px;
-    height: 35px;
-    background: blanchedalmond;
-    border: #d49d7a 1px solid;
-    border-radius: 5px;
-    padding: 0 10px;
-    outline: none;
-}
 .modal__button {
-    margin-top: 40px;
+    bottom: 40px;
     width: 130px;
     height: 45px;
     background: #a74405;
